fix(frontend): changed spacing in email notification details

--- a/frontend/src/component/EmailNotificationTypeButton/PopoverHelperBody.styl
+++ b/frontend/src/component/EmailNotificationTypeButton/PopoverHelperBody.styl
@@ -18,3 +18,5 @@
       font-weight bold
     &__description
       padding-top 10px
+      &__details
+        padding-top 5px
